# Marketing_ROAS

./: .env.development  .env.example  .env.production  .gitignore  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  read_train_first_line.py  requirements.txt
airflow/: Dockerfile  README.md  requirements.txt
airflow/config/: airflow.cfg
airflow/dags/: dag_dbt_run.py
data/sample/: train_sample_10k.csv  train_sample_1k.csv
dbt/: README.md  dbt_project.yml  profiles.yml  requirements.txt
dbt/models/: sources.yml
dbt/tests/: dim_campaigns_campaign_combination_unique.sql  dim_campaigns_surrogate_key_unique.sql  dim_campaigns_valid_is_active.sql  fct_daily_metrics_clicks_lte_impressions.sql  fct_daily_metrics_ctr_range.sql  fct_daily_metrics_hours_valid.sql  fct_daily_metrics_moving_avg_reasonable.sql  fct_daily_metrics_no_negative_values.sql  fct_daily_metrics_reasonable_dod_change.sql  fct_daily_metrics_unique_date_site_device.sql  int_hourly_agg_clicks_lte_impressions.sql  int_hourly_agg_ctr_range.sql  int_hourly_agg_has_data.sql  int_hourly_agg_no_negative_values.sql  stg_ad_events_no_duplicates.sql  (+2 more)
docs/: ARCHITECTURE.md  ARCHITECTURE.mermaid  PROJECT_REQUIREMENTS.md
docs/git/: README.md  (+4 more)
flink/: Dockerfile  README.md  requirements.txt
monitoring/: README.md  docker-compose.monitoring.yml  docker-compose.yml
schemas/: README.md  ad_event.avsc  realtime_ctr_metrics.sql
scripts/: README.md  create_topics.sh  setup-flink.sh
streamlit/: Dockerfile  README.md  config.py  realtime_dashboard.py  requirements.txt
tests/: conftest.py
utils/: logger.py
(+67 files in other folders)
